change for loop

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "mount_file_id": "1tI8whT19Nj3wT_TjC0rO4xlktecIk-l8",
-      "authorship_tag": "ABX9TyPlkrSacO7fz14VC9OtXFMP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +26,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2CpdafWVAE3i",
-        "outputId": "674a41ed-ce15-4906-c9d7-0ec095fb285e"
+        "id": "2CpdafWVAE3i"
       },
       "source": [
         "import nibabel as nib# for reading nifty files\n",
@@ -59,46 +53,42 @@
         "labels = '/content/drive/MyDrive/segmentation/'\n",
         "segmentations =next(os.walk(labels))[2]\n"
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:14: UserWarning: Viewer requires Qt\n",
-            "  \n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 32,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 265
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Uzsye7RUkJrr",
-        "outputId": "68eac9f5-f15d-4415-f5a2-3383e8aab3fb"
+        "outputId": "1a0f19f5-1aa1-4c9f-d52b-a2076051f8aa"
       },
       "source": [
         "inputs= np.zeros((len(patients), img_height , img_wieght , img_channal) , dtype = np.uint8)\n",
         "ground_truth = np.zeros((len(segmentations), img_height , img_wieght , 2) , dtype = np.bool)\n",
-        "\n",
         "print('loading samples and masks , please wait')\n",
         "sys.stdout.flush()\n",
+        "stack = []\n",
         "for f , n in tqdm(enumerate(patients) , total=(len(patients))):\n",
-        "    Images = nib.load((samples + f))[:,:,:img_channal]\n",
-        "    Inputs[n] = Images\n",
+        "    #Images = nib.load((samples + f))[:,:,:img_channal]\n",
+        "    Images = nib.load((samples + n))\n",
         "\n",
-        "Masks = nib.load((labels + f))    \n",
-        "Masks = np.squeeze(Masks).astype(np.bool)\n",
-        "    \n",
-        "Ground_Truth[n, :, :, 0] = ~Masks\n",
-        "Ground_Truth[n, :, :, 1] = Masks\n",
-        "\n"
+        "    stack.append(np.array(Images.dataobj))\n",
+        "#np.stack(stack,0)\n",
+        "for f , n in enumerate(segmentations):\n",
+        "\n",
+        "    Masks = nib.load((labels + n))    \n",
+        "    Masks = np.array(Masks.dataobj).astype(np.bool)\n",
+        "    print(Masks.shape)\n",
+        "    #Ground_Truth[f, :, :, 0] = ~Masks\n",
+        "    #Ground_Truth[f, :, :, 1] = Masks\n",
+        "\n",
+        "#Ground_Truth[n, :, :, 0] = ~Masks\n",
+        "#Ground_Truth[n, :, :, 1] = Masks\n"
       ],
-      "execution_count": 22,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,22 +100,81 @@
         {
           "output_type": "stream",
           "text": [
-            "  0%|          | 0/53 [00:00<?, ?it/s]\n"
+            "100%|██████████| 53/53 [00:06<00:00,  7.66it/s]\n"
           ],
           "name": "stderr"
         },
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-4a01345f9e48>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpatients\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mtotal\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpatients\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mImages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msamples\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mimg_channal\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mInputs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImages\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: must be str, not int"
-          ]
+          "output_type": "stream",
+          "text": [
+            "(384, 384, 24)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 15)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 17)\n",
+            "(384, 384, 15)\n",
+            "(384, 384, 15)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 19)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 18)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 15)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(384, 384, 20)\n",
+            "(512, 512, 29)\n",
+            "(320, 320, 15)\n",
+            "(320, 320, 20)\n",
+            "(320, 320, 20)\n",
+            "(320, 320, 20)\n",
+            "(320, 320, 20)\n",
+            "(320, 320, 17)\n",
+            "(320, 320, 20)\n",
+            "(320, 320, 20)\n",
+            "(320, 320, 20)\n",
+            "(320, 320, 20)\n",
+            "(320, 320, 20)\n",
+            "(256, 256, 18)\n",
+            "(512, 512, 23)\n",
+            "(512, 512, 23)\n",
+            "(512, 512, 23)\n",
+            "(512, 512, 23)\n",
+            "(512, 512, 23)\n",
+            "(512, 512, 23)\n",
+            "(512, 512, 23)\n",
+            "(512, 512, 23)\n",
+            "(256, 256, 23)\n",
+            "(384, 384, 28)\n"
+          ],
+          "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0NSpO968AOUc"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
