erroresh ro nmitoonm begiram (resize kardam)

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -255,7 +255,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uzsye7RUkJrr",
-        "outputId": "7adb668f-a137-41c3-b4ec-52ac175b872d"
+        "outputId": "87a2c3b5-255e-4db4-cc0a-9a837092d487"
       },
       "source": [
         "inputs= np.zeros((len(patients), img_height , img_wieght , img_channal) , dtype = np.uint8)\n",
@@ -280,7 +280,7 @@
         "#Ground_Truth[n, :, :, 0] = ~Masks\n",
         "#Ground_Truth[n, :, :, 1] = Masks\n"
       ],
-      "execution_count": 22,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +292,7 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 53/53 [00:06<00:00,  8.41it/s]\n"
+            "100%|██████████| 53/53 [00:06<00:00,  7.94it/s]\n"
           ],
           "name": "stderr"
         },
@@ -360,7 +360,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0NSpO968AOUc"
+        "id": "0NSpO968AOUc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        },
+        "outputId": "8b5408c3-aff6-402b-be7b-217db75d66cf"
       },
       "source": [
         "# Define Functions: Re_Size\n",
@@ -370,16 +375,30 @@
         "IMG_WIDTH_RESIZED = 378\n",
         "IMG_CHANNELS_RESIZED = 20\n",
         "\n",
-        "def Pre_Process_Re_Size(imgs):\n",
-        "   img_p = np.zeros((imgs.shape[0], IMG_HEIGHT_RESIZED, IMG_WIDTH_RESIZED, IMG_CHANNELS_RESIZED), dtype = np.uint8)\n",
+        "def Pre_Process_Re_Size(inputs):\n",
+        "    imgr = np.zeros((inputs.shape[0], IMG_HEIGHT_RESIZED, IMG_WIDTH_RESIZED, IMG_CHANNELS_RESIZED), dtype = np.uint8)\n",
         "\n",
-        "   for i in range(imgs.shape[0]):  \n",
-        "     img_p[i] = resize(imgs[i], (IMG_HEIGHT_RESIZED, IMG_WIDTH_RESIZED,IMG_CHANNELS_RESIZED)) \n",
-        "\n",
-        "   return img_p"
+        "    for i in range(inputs.shape[0]):\n",
+        "      imgr[i] = resize(inputs[i], (IMG_HEIGHT_RESIZED, IMG_WIDTH_RESIZED,\n",
+        "               IMG_CHANNELS_RESIZED), preserve_range=True)\n",
+        "      \n",
+        "      return imgr\n",
+        "print(imgr.shape)"
       ],
-      "execution_count": 26,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-51-1765295c3e48>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mimgr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimgr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'imgr' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
