add dataloader class

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -26,7 +26,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2CpdafWVAE3i"
+        "id": "2CpdafWVAE3i",
+        "outputId": "417248bb-3ca1-4e0a-80b8-c09159052741",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "import nibabel as nib# for reading nifty files\n",
@@ -49,7 +53,120 @@
         "img_channal=20\n",
         "\n"
       ],
-      "execution_count": 20,
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:14: UserWarning: Viewer requires Qt\n",
+            "  \n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rMFBaf92c1S5"
+      },
+      "source": [
+        "import torch\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "from torchvision import transforms, utils\n"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "31DttFLNcse1"
+      },
+      "source": [
+        "class dataset(Dataset):\n",
+        "\n",
+        "  def __init__(self, root, transform = None):\n",
+        "    super().__init__()\n",
+        "    self.root = root\n",
+        "    self.transform = transform\n",
+        "  def __getitem__(self, value):\n",
+        "    samples = self.root + 'samples/'\n",
+        "    patients = next(os.walk(samples))[2]\n",
+        "    patients.sort()\n",
+        "    labels = self.root + 'segmentation/'\n",
+        "    segmentations =next(os.walk(labels))[2]\n",
+        "\n",
+        "    Images = nib.load((samples + patients[value]))\n",
+        "    im = np.array(Images.dataobj)\n",
+        "    \n",
+        "    Masks = nib.load((labels + segmentations[value]))    \n",
+        "    Masks = np.array(Masks.dataobj)\n",
+        "\n",
+        "    return { 'mask':Masks , 'sample':im}\n",
+        "\n",
+        "    \n",
+        "  def __len__(self):\n",
+        "    return len(next(os.walk(self.root + 'samples/'))[2])\n"
+      ],
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "79adVmUkjZaf"
+      },
+      "source": [
+        "class resize():\n",
+        "  pass"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7KODNUl2jx6r"
+      },
+      "source": [
+        "class crop():\n",
+        "  pass"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1azXiawdjgin"
+      },
+      "source": [
+        "transform = transforms.Compose([resize(),crop(),transforms.ToTensor()])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6Pe0lAevfrJo"
+      },
+      "source": [
+        "h = dataset('/content/drive/MyDrive/', transform=transform)"
+      ],
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "61C9IK0Rf2iU"
+      },
+      "source": [
+        "dataloader = DataLoader(h)"
+      ],
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -63,7 +180,7 @@
         "labels = '/content/drive/MyDrive/segmentation/'\n",
         "segmentations =next(os.walk(labels))[2]\n"
       ],
-      "execution_count": 21,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -82,7 +199,7 @@
         "print(np.array(Images.dataobj).shape)\n",
         "plt.imshow(im[:,:,10])"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +252,7 @@
         "print(np.unique(Masks))\n",
         "plt.imshow(Masks)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +305,7 @@
         "print(np.unique(Masks))\n",
         "plt.imshow(Masks)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,13 +348,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0e447a93-8a36-4ccd-c212-ecb21e59e914"
+        "outputId": "e450bc10-8d4c-4fce-a9e8-7c9600a4da88"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +397,7 @@
         "#Ground_Truth[n, :, :, 0] = ~Masks\n",
         "#Ground_Truth[n, :, :, 1] = Masks\n"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +502,7 @@
         "      return imgr\n",
         "print(imgr.shape)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
