insert resize class in main class

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -26,11 +26,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2CpdafWVAE3i",
-        "outputId": "417248bb-3ca1-4e0a-80b8-c09159052741",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "2CpdafWVAE3i"
       },
       "source": [
         "import nibabel as nib# for reading nifty files\n",
@@ -53,17 +49,8 @@
         "img_channal=20\n",
         "\n"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:14: UserWarning: Viewer requires Qt\n",
-            "  \n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 94,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -75,7 +62,7 @@
         "from torch.utils.data import Dataset, DataLoader\n",
         "from torchvision import transforms, utils\n"
       ],
-      "execution_count": 4,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -99,17 +86,17 @@
         "\n",
         "    Images = nib.load((samples + patients[value]))\n",
         "    im = np.array(Images.dataobj)\n",
-        "    \n",
+        "    im = resize_1()(im)\n",
         "    Masks = nib.load((labels + segmentations[value]))    \n",
         "    Masks = np.array(Masks.dataobj)\n",
         "\n",
-        "    return { 'mask':Masks , 'sample':im}\n",
+        "    return { 'sample':im}\n",
         "\n",
         "    \n",
         "  def __len__(self):\n",
         "    return len(next(os.walk(self.root + 'samples/'))[2])\n"
       ],
-      "execution_count": 34,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -118,10 +105,13 @@
         "id": "79adVmUkjZaf"
       },
       "source": [
-        "class resize():\n",
-        "  pass"
+        "class resize_1(object):\n",
+        "  def __init__(self):\n",
+        "    pass\n",
+        "  def __call__(self,inp):\n",
+        "    return resize(inp, (IMG_HEIGHT_RESIZED, IMG_WIDTH_RESIZED), preserve_range=True)"
       ],
-      "execution_count": null,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -153,9 +143,9 @@
         "id": "6Pe0lAevfrJo"
       },
       "source": [
-        "h = dataset('/content/drive/MyDrive/', transform=transform)"
+        "h = dataset('/content/drive/MyDrive/', transform=None)"
       ],
-      "execution_count": 35,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -164,9 +154,20 @@
         "id": "61C9IK0Rf2iU"
       },
       "source": [
-        "dataloader = DataLoader(h)"
+        "dataloader = DataLoader(h, 4)"
       ],
-      "execution_count": 42,
+      "execution_count": 110,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7BlRnWBamWiJ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +181,7 @@
         "labels = '/content/drive/MyDrive/segmentation/'\n",
         "segmentations =next(os.walk(labels))[2]\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -354,7 +355,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,12 +478,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0NSpO968AOUc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 197
-        },
-        "outputId": "8b5408c3-aff6-402b-be7b-217db75d66cf"
+        "id": "0NSpO968AOUc"
       },
       "source": [
         "# Define Functions: Re_Size\n",
@@ -499,23 +495,10 @@
         "      imgr[i] = resize(inputs[i], (IMG_HEIGHT_RESIZED, IMG_WIDTH_RESIZED,\n",
         "               IMG_CHANNELS_RESIZED), preserve_range=True)\n",
         "      \n",
-        "      return imgr\n",
-        "print(imgr.shape)"
+        "      return imgr\n"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-51-1765295c3e48>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mimgr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimgr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'imgr' is not defined"
-          ]
-        }
-      ]
+      "execution_count": 51,
+      "outputs": []
     }
   ]
 }
