--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOD2H//gmDty9f3FedcZoUa",
+      "authorship_tag": "ABX9TyNzk0fxXHdvCTakCYZNKVpT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,7 @@
         "import random\r\n",
         "import numpy as np\r\n",
         "import tensorflow as tf\r\n",
+        "import nibabel as nib# for reading nifty files\r\n",
         "from keras.layers import *\r\n",
         "import keras.backend as k\r\n",
         "from keras.models import *\r\n",
@@ -68,7 +69,7 @@
       "source": [
         "# 3. Initialize Images and Mask Size\r\n",
         "\r\n",
-        "IMG_HEIGHT, IMG_WIDTH, IMG_CHANNELS = 255, 255, 3"
+        "IMG_HEIGHT, IMG_WIDTH, IMG_CHANNELS = 383, 383, 20"
       ],
       "execution_count": null,
       "outputs": []
@@ -86,22 +87,23 @@
         "\r\n",
         "def Data_Proprocessing_Train():\r\n",
         "    \r\n",
-        "    Init_Image = np.zeros((len(Train_Mask_List), 384, 384, 3), dtype = np.uint8)\r\n",
+        "    Init_Image = np.zeros((len(Train_Mask_List), 383, 383, 20), dtype = np.uint8)\r\n",
         "    Init_Mask = np.zeros((len(Train_Mask_List), 384, 384), dtype = np.bool)\r\n",
+        "    #resized images\r\n",
         "    Train_X = np.zeros((len(Train_Mask_List), IMG_HEIGHT, IMG_WIDTH, IMG_CHANNELS), dtype = np.uint8)\r\n",
         "    Train_Y = np.zeros((len(Train_Mask_List), IMG_HEIGHT, IMG_WIDTH, 1), dtype = np.bool)\r\n",
         "    \r\n",
         "    n = 0\r\n",
         "    \r\n",
-        "    for mask_path in glob.glob('{}'.format(TRAIN_MASK_PATH)):\r\n",
+        "    for mask_path in glob.glob('{}/'.format(TRAIN_MASK_PATH)):\r\n",
         "        \r\n",
-        "        base = os.path.basename(mask_path)\r\n",
+        "        base = os.path.basename(mask_path)  #files name\r\n",
         "        image_ID, ext = os.path.splitext(base)\r\n",
         "        image_path = '{}/{}'.format(TRAIN_IMAGE_PATH, image_ID)\r\n",
-        "        mask = imread(mask_path)\r\n",
-        "        image = imread(image_path)\r\n",
+        "        mask = nib.load((mask_path))\r\n",
+        "        image = nib.load((image_path))\r\n",
         "        \r\n",
-        "        y_coord, x_coord = np.where(mask == 255)\r\n",
+        "        y_coord, x_coord = np.where(mask == 255) #white pixels coordinate in main images\r\n",
         "        \r\n",
         "        y_min = min(y_coord) \r\n",
         "        y_max = max(y_coord)\r\n",
