add filter to mask

--- a/numpy_array.ipynb
+++ b/numpy_array.ipynb
@@ -37,7 +37,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -58,13 +58,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "71d1a1f3-dd95-421c-c1d1-ef7d0f6fbbb0"
+        "outputId": "68d0cf15-4f68-43a0-bea2-c3997f541cd8"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +83,7 @@
       "source": [
         "IMG_HEIGHT, IMG_WIDTH =200,200"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
         "id": "KZ1-7XrJyHL9"
       },
       "source": [
-        "def gen():\n",
+        "def gen(filter = True):\n",
         "  batch_i = []\n",
         "  batch_m =[]\n",
         "  samples = '/content/drive/MyDrive/samples/'\n",
@@ -117,17 +117,29 @@
         "              anti_aliasing=True,\n",
         "               preserve_range=True)\n",
         "    for k in range(im.shape[2]):\n",
-        "      im1 = np.expand_dims(img_resize[:,:,k],2)\n",
-        "      ma = np.expand_dims(mask_resize[:,:,k],2)\n",
-        "      batch_i.append(im1)\n",
-        "      batch_m.append(ma)\n",
+        "      if filter:\n",
+        "        if np.all(mask_resize[:,:,k]==0):\n",
+        "          continue\n",
+        "        else :\n",
+        "          im1 = np.expand_dims(img_resize[:,:,k],2)\n",
+        "          ma = np.expand_dims(mask_resize[:,:,k],2)\n",
+        "          batch_i.append(im1)\n",
+        "          batch_m.append(ma)\n",
+        "      else :\n",
+        "\n",
+        "\n",
+        "        im1 = np.expand_dims(img_resize[:,:,k],2)\n",
+        "        ma = np.expand_dims(mask_resize[:,:,k],2)\n",
+        "        batch_i.append(im1)\n",
+        "        \n",
+        "        batch_m.append(ma)\n",
         "  batch_image = np.stack(batch_i)\n",
         "  batch_mask = np.stack(batch_m)\n",
         "\n",
         "\n",
         "  return batch_image, batch_mask\n"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -138,8 +150,36 @@
       "source": [
         "total_image , total_mask = gen()"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B1Y0NMrEg51f",
+        "outputId": "fe961bb2-59ce-450b-b6df-500cd18b10df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "total_image.shape, total_mask.shape"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((421, 200, 200, 1), (421, 200, 200, 1))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
     }
   ]
 }
