add dataset to numpy

--- a/numpy_array.ipynb
+++ b/numpy_array.ipynb
@@ -48,7 +48,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -58,18 +58,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "68d0cf15-4f68-43a0-bea2-c3997f541cd8"
+        "outputId": "8a7ff0b9-cf5d-4aae-cf6a-f3477a809c86"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -81,9 +81,9 @@
         "id": "QfR6URnCEmgZ"
       },
       "source": [
-        "IMG_HEIGHT, IMG_WIDTH =200,200"
+        "IMG_HEIGHT, IMG_WIDTH =300,300"
       ],
-      "execution_count": 18,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
         "\n",
         "  return batch_image, batch_mask\n"
       ],
-      "execution_count": 22,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -150,36 +150,87 @@
       "source": [
         "total_image , total_mask = gen()"
       ],
-      "execution_count": 23,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "B1Y0NMrEg51f",
-        "outputId": "fe961bb2-59ce-450b-b6df-500cd18b10df",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "df1c8255-7130-4616-d3f8-4a8b4f5612db"
       },
       "source": [
         "total_image.shape, total_mask.shape"
       ],
-      "execution_count": 24,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "((421, 200, 200, 1), (421, 200, 200, 1))"
+              "((608, 300, 300, 1), (608, 300, 300, 1))"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 7
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M2eHtJJ9NCQl"
+      },
+      "source": [
+        "dataset = tf.data.Dataset.from_tensor_slices((total_image, total_mask))"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xT3lfDq7NbVt",
+        "outputId": "fb942280-5dc2-46ed-ada3-5576cdaed504",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dataset.element_spec"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(TensorSpec(shape=(300, 300, 1), dtype=tf.float64, name=None),\n",
+              " TensorSpec(shape=(300, 300, 1), dtype=tf.float64, name=None))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZIsAGwgSNds8"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
